--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ function toggleSidebar() {
           <span class="icon"><i class="fas fa-phone"></i></span>
           <span class="title">Contact</span>
           </a></li>
-        <li><a href="" >
+        <li><a href="https://g.page/r/CYgvB8Kj9Fq-EB0/review" >
           <span class="icon"><i class="fas fa-star"></i></span>
           <span class="title">Review</span>
           </a></li>
