--- a/product.html
+++ b/product.html
@@ -50,7 +50,7 @@ function toggleSidebar() {
           <span class="icon"><i class="fa fa-phone"></i></span>
           <span class="title">Contact</span>
           </a></li>
-        <li><a href="" >
+        <li><a href="https://g.page/r/CYgvB8Kj9Fq-EB0/review" >
           <span class="icon"><i class="fa fa-star"></i></span>
           <span class="title">Review</span>
           </a></li>
