--- a/buy.html
+++ b/buy.html
@@ -30,7 +30,7 @@
   
     </form>
     <script>
-        const scriptURL = ''
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbzXh-Kar5tztFgzfR0WzLTJuCYggD-rxmdUwpElLjHOEVdVz4-aryxT4roDVREAHXD23w/exec'
         const form = document.forms['google-sheet']
       
         form.addEventListener('submit', e => {
