--- a/buy.html
+++ b/buy.html
@@ -25,7 +25,7 @@
         <option value="party_hamper">Party Hamper Rs.399</option>
         <option value="sweet_hamper">Sweet Hmaper Rs.199</option>
       </select>  
-      <input type="submit" value="Buy">
+      <input type="submit" value="Buy" name="submit">
       
   
     </form>
