--- a/buy.html
+++ b/buy.html
@@ -31,7 +31,7 @@
     </form>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyXIwASHF46qGqH220tUM4acmEEmfEKtgU52o2PVezUGk4DJHQmUnqtThqS8s8nJgbZuA/exec'
-        const form = document.forms['google-sheet']
+        const form = document.forms['Giftisiuos|Orders']
       
         form.addEventListener('submit', e => {
           e.preventDefault()
