--- a/buy.html
+++ b/buy.html
@@ -8,7 +8,7 @@
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div class="container">
-    <form method="POST" name="google-sheet">
+    <form method="POST" name="Gifticious|Orders">
   
       <label for="fname">First Name</label>
       <input type="text" id="fname" name="firstname" placeholder="Your name..">
