--- a/special_hamper.html
+++ b/special_hamper.html
@@ -13,7 +13,7 @@
  
   <!-- Left Column / Headphones Image -->
   <div class="left-column">
-    <img data-image="black" src="pro3.jpg" alt="">
+    <img src="pro3.jpg" alt="">
   </div>
  
  
