--- a/party_hamper.html
+++ b/party_hamper.html
@@ -13,7 +13,7 @@
  
   <!-- Left Column / Headphones Image -->
   <div class="left-column">
-    <img data-image="black" src="pro2.jpg" alt="">
+    <img src="pro2.jpg" alt="">
   </div>
  
  
