--- a/index.html
+++ b/index.html
@@ -2,56 +2,91 @@
   <link rel="icon" type="image/x-icon" href="icon.png">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-<script>
-function toggleSidebar() {
-  const sidebar = document.getElementById('sidebar');
-  if (sidebar.style.left === '-250px') {
-    sidebar.style.left = '0';
-  } else {
-    sidebar.style.left = '-250px';
-  }
-}
-</script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style/navbar.css">
 <link rel="stylesheet" href="style/shop.css">
+<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 <div class="wrapper">
   
   <div class="top_navbar">
-    <button class="toggle-btn" onclick="toggleSidebar()">
-      <div class="hamburger">
-        <div class="one"></div>
-        <div class="two"></div>
-        <div class="three"></div>
+      <div class="logoimg">
+<img src="logo.png">
      </div></button>
     <div class="top_menu">
       <div class="logo">
-        Gifticious
+         Gifticious
       </div>
     </div>
   </div>
+  <body>
+      <div class="sidebar">
+          <a href="#" class="active">
+              <i class="fas fa-home"></i>
+              <span>Home</span>
+          </a>
+          <a href="#">
+              <i class="fas fa-gifts"></i>
+              <span>Product</span>
+          </a>
+          <a href="#">
+              <i class="fas fa-phone-alt"></i>
+              <span>Contact</span>
+          </a>
+          <a href="#">
+              <i class="fas fa-star"></i>
+              <span>Review</span>
+          </a>
+      </div>
   
-  <div class="sidebar" id="sidebar">
-      <ul>
-        <li><a href="index.html" class="active">
-          <span class="icon"><i class="fas fa-home"></i></span>
-          <span class="title">home</span>
-          </a></li>
-        <li><a href="product.html">
-          <span class="icon"><i class="fas fa-gift"></i></span>
-          <span class="title">Product</span>
-          </a></li>
-        <li><a href="contact.html">
-          <span class="icon"><i class="fas fa-phone"></i></span>
-          <span class="title">Contact</span>
-          </a></li>
-        <li><a href="https://g.page/r/CYgvB8Kj9Fq-EB0/review" >
-          <span class="icon"><i class="fas fa-star"></i></span>
-          <span class="title">Review</span>
-          </a></li>
-    </ul>
-  </div>
-  
+      <div class="content">
+          <!-- Your main content goes here -->
+      </div>
+  </body>
+  </html>
+
+  <style>
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
+
+.sidebar {
+    height: 100%;
+    width: 70px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+}
+
+.sidebar a {
+    text-decoration: none;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0;
+    width: 100%;
+    transition: 0.3s;
+}
+
+.sidebar i {
+    font-size: 20px;
+}
+
+.content {
+    margin-left: 70px;
+    padding: 20px;
+}
+
+  </style>
+    
   <div class="main_container">
     <div class="page">
       <body>
