--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
   </div>
   <body>
       <div class="sidebar">
-          <a href="#" class="active">
+          <a href="index.html" class="active">
               <i class="fas fa-home"></i>
               <span>Home</span>
           </a>
-          <a href="#">
+          <a href="product.html">
               <i class="fas fa-gifts"></i>
               <span>Product</span>
           </a>
-          <a href="#">
+          <a href="contact.html">
               <i class="fas fa-phone-alt"></i>
               <span>Contact</span>
           </a>
-          <a href="#">
+          <a href="https://g.co/kgs/voZcjF">
               <i class="fas fa-star"></i>
               <span>Review</span>
           </a>
