--- a/product.html
+++ b/product.html
@@ -25,11 +25,11 @@
   </div>
   <body>
       <div class="sidebar">
-          <a href="index.html" class="active">
+          <a href="index.html" >
               <i class="fas fa-home"></i>
               <span>Home</span>
           </a>
-          <a href="product.html">
+          <a href="product.html" class="active">
               <i class="fas fa-gifts"></i>
               <span>Product</span>
           </a>
