--- a/contact.html
+++ b/contact.html
@@ -98,8 +98,8 @@ body {
             <h1><b>Contact</b></h1><br>
             <dav><span class="icon"><i class="fa fa-group"></i></span>
           <span class="title">Gifticious</span><bR><br>
-          <span class="icon"><i class="fa fa-instagram"></i></span>
-          <span class="title"><a href="">@_gifticious_</a></span><br><br>
+          <span class="icon"><i class="fab fa-instagram"></i></span>
+          <span class="title"><a href="https://www.instagram.com/_gifticious_/">@_gifticious_</a></span><br><br>
           <span class="icon"><i class="fa fa-envelope"></i></span>
           <span class="title">Giftkart.love@gmail.com</span>
         </div></dav>
