--- a/party_hamper.html
+++ b/party_hamper.html
@@ -24,13 +24,13 @@
     <div class="product-description">
       <span>Hamper</span>
       <h1>Party Hamper</h1>
-      <p>*Free* Rakhi inside for party rakhi hamper</p>
+      <p>Rakhi hamper with love</p>
     </div>
  
 
     <!-- Product Pricing -->
     <div class="product-price">
-      <span>₹399</span>
+      <span>₹499</span>
       <a href="buy.html" class="cart-btn">Buy</a>
     </div>
   </div>
