--- a/product.html
+++ b/product.html
@@ -96,15 +96,22 @@ body {
     <div class="main_container">
         <h1>Rakhi special Hamper</h1>
         <div class="card">
-            <img src="pro1.jpg" alt="199">
+            <img src="pro4.png" alt="99">
+            <h2>Mini Hamper</h2>
+            <p1 class="price">Rs. 99</p1>
+            <p>This is mini hamper to gift</p>
+            <p><button onclick="window.location.href='sweet_hamper.html';">Buy</button></p>
+          </div>
+        <div class="card">
+            <img src="pro1.png" alt="199">
             <h2>Sweet Hamper</h2>
             <p1 class="price">Rs. 199</p1>
-            <p>This sweet hamper made with love to gift to your love ones</p>
+            <p>This is Sweet Hamper To gift Someone </p>
             <p><button onclick="window.location.href='sweet_hamper.html';">Buy</button></p>
           </div>
 
           <div class="card">
-            <img src="pro2.jpg" alt="499">
+            <img src="pro2.png alt="499">
             <h2>Party Hamper</h2>
             <p1 class="price">Rs.499 </p1>
             <p>This party hamper made with love to gift to your love ones</p>
@@ -112,10 +119,10 @@ body {
           </div>
 
           <div class="card">
-            <img src="pro3.jpg" alt="699">
+            <img src="pro3.png" alt="699">
             <h2>Special Hamper</h2>
             <p1 class="price">Rs. 699</p1>
-            <p>This special hamper made with love to gift to your love ones</p>
+            <p>This is Special Hamper To gift Someone Special</p>
             <p><button onclick="window.location.href='special_hamper.html';">Buy</button></p>
           </div>
     </div>
