--- a/product.html
+++ b/product.html
@@ -98,14 +98,14 @@ body {
         <div class="card">
             <img src="pro4.png" alt="99">
             <h2>Mini Hamper</h2>
-            <p1 class="price">Rs. 99</p1>
-            <p>This is mini hamper to gift</p>
+            <p1 class="price">Rs. 99</p1><br>
+            <p>This is mini hamper Best to gift to Kids</p>
             <p><button onclick="window.location.href='sweet_hamper.html';">Buy</button></p>
           </div>
         <div class="card">
             <img src="pro1.png" alt="199">
             <h2>Sweet Hamper</h2>
-            <p1 class="price">Rs. 199</p1>
+            <p1 class="price">Rs. 199</p1><br>
             <p>This is Sweet Hamper To gift Someone </p>
             <p><button onclick="window.location.href='sweet_hamper.html';">Buy</button></p>
           </div>
@@ -121,7 +121,7 @@ body {
           <div class="card">
             <img src="pro3.png" alt="699">
             <h2>Special Hamper</h2>
-            <p1 class="price">Rs. 699</p1>
+            <p1 class="price">Rs. 699</p1><br>
             <p>This is Special Hamper To gift Someone Special</p>
             <p><button onclick="window.location.href='special_hamper.html';">Buy</button></p>
           </div>
