--- a/buy.html
+++ b/buy.html
@@ -25,6 +25,7 @@
       <option value="special_hamper">Special Hamper Rs.699</option>
       <option value="party_hamper">Party Hamper Rs.499</option>
       <option value="sweet_hamper">Sweet Hmaper Rs.199</option>
+      <option value="sweet_hamper">Mini Hmaper Rs.99</option>
     </select>  
     <input type="submit" value="Buy" name="submit" onclick="setTimeout(myFunction, 5000)">
     
