--- a/product.html
+++ b/product.html
@@ -100,7 +100,7 @@ body {
             <h2>Mini Hamper</h2>
             <p1 class="price">Rs. 99</p1><br>
             <p>This is mini hamper Best to gift to Kids</p>
-            <p><button onclick="window.location.href='sweet_hamper.html';">Buy</button></p>
+            <p><button onclick="window.location.href='mini_hamper.html';">Buy</button></p>
           </div>
         <div class="card">
             <img src="pro1.png" alt="199">
