--- a/special_hamper.html
+++ b/special_hamper.html
@@ -54,7 +54,7 @@
   <!-- 		shopping cart icon-->
      <span class="shopping-cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
   <!-- 		Buy Now / ADD to Cart-->
-     <span class="buy">Buy Now</span>
+     <a href="buy.html"><span class="buy">Buy Now</span></a>
    </button>
     <!-- End Button buying -->
     
