--- a/product.html
+++ b/product.html
@@ -111,7 +111,7 @@ body {
           </div>
 
           <div class="card">
-            <img src="pro2.png alt="499">
+            <img src="pro2.png" alt="499">
             <h2>Party Hamper</h2>
             <p1 class="price">Rs.499 </p1>
             <p>This party hamper made with love to gift to your love ones</p>
